--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "dotenv": "^16.0.3",
     "polished": "^4.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -19,7 +20,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "npx chromatic --project-token=`${process.env.CHROMATIC_PROJECT_TOKEN}`"
   },
   "eslintConfig": {
     "extends": [
@@ -62,6 +64,9 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
+    "chromatic": "^6.11.4",
     "prettier": "^2.7.1"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "learnstorybook-design-system-template@0.1.0"
 }
